updated clipping bug on mobile form

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -598,7 +598,8 @@ footer {
 
     form {
         margin-top: 10px;
-        margin-left: -15px;
+        position: relative;
+        left: 3px;
         }
 }
 @media all and (max-width: 365px) {
@@ -608,7 +609,8 @@ footer {
 
     form {
         margin-top: 10px;
-        margin-left: -15px;
+        position: relative;
+        left: 19px;
         }
     }
 
